# dbtimetable

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: blocking-issues.yml  ci.yml
src/: app.rs  config.rs  dbapiclient.rs  dbapiclientimpl.rs  dbapiclientreqwest.rs  main.rs  timetable.rs  timetableformatter.rs  timetableformatterjson.rs  timetableformattersimplestring.rs  timetablepresenter.rs  timetablepresenterconsole.rs  timetablepresenterjson.rs  timetablepresenterplaintext.rs  xmlparser.rs  xmlparserquickxml.rs
