[package]
name = "dbtimetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
confy = { version = "0.5.1" }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.23.0", features = ["serialize"] }
chrono = { version = "0.4.19" }
merge = { version = "0.1.0" }
serde_json = { version = "1.0" }
async-trait = { version = "0.1.60" }